<resources>
    <string name="app_name">MAPD711-001_Test</string>
    <string name="hello">Hello </string>
    <string name="calories_day"> Calories/day </string>
    <string name="calories"> Calories </string>
    <string name="age">  Age: </string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="find_your_needed_calories">FIND YOUR NEEDED CALORIES</string>
    <string name="load_an_image">Load an Image</string>
    <string name="activity_level">Activity Level:</string>
    <string name="your_height_cm">Your Height (cm):</string>
    <string name="your_weight_kg">Your Weight (Kg):</string>
    <string name="your_age">Your Age:</string>
    <string name="human_metabolism_calculator">Human Metabolism Calculator</string>
    <string name="your_name">Your Name:</string>
    <string-array name="string_exercise_frequency">
        <item>Few OR No exercise</item>
        <item>Light exercise 1–3 days per week</item>
        <item>Medium exercise 4–5 days per week</item>
        <item>Vigorous exercise 6–7 days per week</item>
    </string-array>
</resources>